Updating vignette to work with as.expectation.logical

--- a/vignettes/RTest.Rmd
+++ b/vignettes/RTest.Rmd
@@ -222,6 +222,7 @@ want to perform this task for our described
 
 ```{r, eval = TRUE, echo = TRUE, message = FALSE, warning=FALSE}
 library(magrittr)
+library(RTest)
 RTest::RTest.execute(
    testcase.directory = list.dirs(find.package('RTest'),recursive=TRUE) %>% 
  				grep(pattern="xml-templates",value=TRUE),
