--- a/vignettes/RTest-test-adapter.Rmd
+++ b/vignettes/RTest-test-adapter.Rmd
@@ -5,7 +5,7 @@ output:
 author: "[Sebastian Wolf](mailto:sebastian@mail-wolf.de)"
 date: "16 Apr 2018"
 vignette: >
-  %\VignetteIndexEntry{RTest Vignette}
+  %\VignetteIndexEntry{RTest Test Adapter}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
